--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,26 @@
             </div>
         </div>
     </section>
+    <section class="footer">
+        <div class="social">
+            <ul>
+                <li><h4>Our Location<h4></li>
+                <li>Lorem ipsum dolor sit, amet consectetur</li>
+                <li>0600000000/0500000000</li>
+            </ul>
+            <ul>
+                <li><h4>Folow Us</h4></li>
+                <li>
+                    <ul>
+                        <li class=""><a href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li class=""><a href="#"><i class="fab fa-instagram"></i></a></li>
+                        <li class=""><a href="#"><i class="fab fa-snapchat-square"></i></a></li>
+                        <li class=""><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </section>
     <script src="./script.js"></script>
 </body>
 
