--- a/index.html
+++ b/index.html
@@ -1,105 +1,123 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF8-">
-        <title>NOUHI CARS.com</title>
 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="cars.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-        
-        
-    </head>
-    <body>
-        <nav>
-            <div class="logo">
-                <h4>NOUHI CARS<h4>
-                </div>
-            <ul class="nav-links">
-                <li><a href="index.html">home</a></li>
-                <li><a href="Réservation.html">Réservation</a></li>
-                <li><a href="Gallerie.html">Gallerie</a></li>
-                <li><a href="Contact.html">Contact</a></li>
-            </ul>
-            <div class="menu">
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="line3"></div>
-            </div>
-        </nav>
+<head>
+    <meta charset="UTF8-">
+    <title>NOUHI CARS.com</title>
 
-         <div class="container">
-                <h1 class="title2">Rent a Car Online Today &</h1><br>
-                <h2 class="title2">Enjoy the Best Deals, Rates <br>& Accessories</h2><br><br>
-                <p class="title2">We are open 24/7 including major holidaysp</p>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="cars.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
+</head>
+
+<body>
+    <nav>
+        <div class="logo">
+            <h4>NOUHI CARS<h4>
         </div>
-        <!-- ------------------->
-        <section class="prodact">
+        <ul class="nav-links">
+            <li><a href="index.html">home</a></li>
+            <li><a href="Réservation.html">Réservation</a></li>
+            <li><a href="Gallerie.html">Gallerie</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+        </ul>
+        <div class="menu">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
+    </nav>
 
-            <div class="prodact-container">
-                <!-- 11111 -->
-                <div class="prodact-box">
+    <div class="container">
+        <h1 class="title2">Rent a Car Online Today &</h1><br>
+        <h2 class="title2">Enjoy the Best Deals, Rates <br>& Accessories</h2><br><br>
+        <p class="title2">We are open 24/7 including major holidaysp</p>
+    </div>
+    <!-- ------------------->
+    <section class="prodact">
 
-                    <div class="prodact-img">
-                        <img src="pexels-andrea-piacquadio-787472.jpg" alt="prodact" width="">
-                    </div>
-                    <div class="prodact-text">
-                        <h3>Lorem ipsum dolor sit amet, consectetur</h3><br>
-                        <p>Vestibulum id est eu felis vulputate hendrerit.<br>Suspendisse dapibus turpis in dui pulvinar <br> imperdiet. Nunc consectetur.</p><br><br>
-                        <a href="#">Read More</a>
-                    </div>
+        <div class="prodact-container">
+            <!-- 11111 -->
+            <div class="prodact-box">
+
+                <div class="prodact-img">
+                    <img src="pexels-andrea-piacquadio-787472.jpg" alt="prodact" width="">
                 </div>
-                <!-- 222222 -->
-                <div class="prodact-box">
-
-                    <div class="prodact-img">
-                        <img src="pexels-andrea-piacquadio-787476.jpg" alt="prodact" width="">
-                    </div>
-                    <div class="prodact-text">
-                        <h3>Lorem ipsum dolor sit amet, consectetur</h3><br>
-                        <p>Vestibulum id est eu felis vulputate hendrerit.<br>Suspendisse dapibus turpis in dui pulvinar <br> imperdiet. Nunc consectetur.</p><br><br>
-                        <a href="#">Read More</a>
-                    </div>
-                </div>
-                <!-- 333333 -->
-                <div class="prodact-box">
-
-                    <div class="prodact-img">
-                        <img src="pexels-kelson-downes-1149137.jpg" alt="prodact" width="">
-                    </div>
-                    <div class="prodact-text">
-                        <h3>Lorem ipsum dolor sit amet, consectetur</h3><br>
-                        <p>Vestibulum id est eu felis vulputate hendrerit.<br>Suspendisse dapibus turpis in dui pulvinar <br> imperdiet. Nunc consectetur.</p><br><br>
-                        <a href="#">Read More</a>
-                    </div>
-                </div>
-            </div>    
-        </section>
-
-        <section class="about">
-            <div class="main">
-                <img src="pexels-roberto-nickson-2526128.jpg">
-                <div class="about-text">
-                    <h1>About Us</h1>
-                    <h5>Lorem ipsum dolor sit amet, consectetur</h5>
-                    <p>Vestibulum id est eu felis vulputate hendrerit.
-                        Suspendisse dapibus turpis in dui pulvinar
-                        imperdiet. Nunc consectetu</p>
-                    <a href="#">Let's Talk</a>
+                <div class="prodact-text">
+                    <h3>Lorem ipsum dolor sit amet, consectetur</h3><br>
+                    <p>Vestibulum id est eu felis vulputate hendrerit.<br>Suspendisse dapibus turpis in dui pulvinar
+                        <br> imperdiet. Nunc consectetur.</p><br><br>
+                    <a href="#">Read More</a>
                 </div>
             </div>
-        </section>
+            <!-- 222222 -->
+            <div class="prodact-box">
 
-        <section class="footer">
-            <div class="social">
-                <ul>
-                    <li class=""><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li class=""><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li class=""><a href="#"><i class="fab fa-snapchat-square"></i></a></li>
-                    <li class=""><a href="#"><i class="fab fa-facebook-square"></i></a></li>
-                </ul>
+                <div class="prodact-img">
+                    <img src="pexels-andrea-piacquadio-787476.jpg" alt="prodact" width="">
                 </div>
-        </section>
+                <div class="prodact-text">
+                    <h3>Lorem ipsum dolor sit amet, consectetur</h3><br>
+                    <p>Vestibulum id est eu felis vulputate hendrerit.<br>Suspendisse dapibus turpis in dui pulvinar
+                        <br> imperdiet. Nunc consectetur.</p><br><br>
+                    <a href="#">Read More</a>
+                </div>
+            </div>
+            <!-- 333333 -->
+            <div class="prodact-box">
+
+                <div class="prodact-img">
+                    <img src="pexels-kelson-downes-1149137.jpg" alt="prodact" width="">
+                </div>
+                <div class="prodact-text">
+                    <h3>Lorem ipsum dolor sit amet, consectetur</h3><br>
+                    <p>Vestibulum id est eu felis vulputate hendrerit.<br>Suspendisse dapibus turpis in dui pulvinar
+                        <br> imperdiet. Nunc consectetur.</p><br><br>
+                    <a href="#">Read More</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="about">
+        <div class="main">
+            <img src="pexels-roberto-nickson-2526128.jpg">
+            <div class="about-text">
+                <h1>About Us</h1>
+                <h5>Lorem ipsum dolor sit amet, consectetur</h5>
+                <p>Vestibulum id est eu felis vulputate hendrerit.
+                    Suspendisse dapibus turpis in dui pulvinar
+                    imperdiet. Nunc consectetu</p>
+                <a href="#">Let's Talk</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="footer">
+        <div class="social">
+            <ul>
+                <li><h4>Our Location<h4></li>
+                <li>Lorem ipsum dolor sit, amet consectetur</li>
+                <li>0600000000/0500000000</li>
+            </ul>
+            <ul>
+                <li><h4>Folow Us</h4></li>
+                <li>
+                    <ul>
+                        <li class=""><a href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li class=""><a href="#"><i class="fab fa-instagram"></i></a></li>
+                        <li class=""><a href="#"><i class="fab fa-snapchat-square"></i></a></li>
+                        <li class=""><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </section>
     <script src="./script.js"></script>
-    </body>
+</body>
+
 </html>
