--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h4>NOUHI CARS<h4>
         </div>
         <ul class="nav-links">
-            <li><a href="index.html">home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="Réservation.html">Réservation</a></li>
             <li><a href="Gallerie.html">Gallerie</a></li>
             <li><a href="Contact.html">Contact</a></li>
@@ -36,11 +36,10 @@
         <h1 class="title2">Rent a Car Online Today &</h1><br>
         <h2 class="title2">Enjoy the Best Deals, Rates <br>& Accessories</h2><br><br>
         <p class="title2">We are open 24/7 including major holidaysp</p>
+        <a href="#">Let's Réserve</a>
     </div>
     <!-- ------------------->
     <section class="prodact">
-
-        <div class="prodact-container">
             <!-- 11111 -->
             <div class="prodact-box">
 
@@ -80,7 +79,6 @@
                     <a href="#">Read More</a>
                 </div>
             </div>
-        </div>
     </section>
 
     <section class="about">
