--- a/Réservation.html
+++ b/Réservation.html
@@ -58,7 +58,7 @@
             </select>
             <input placeholder="Number of Days" id="number" type="number">
             
-            <button type="button" id="Bottom">Final Prix</button>
+            <a href="#" type="button" id="Bottom">Final Prix</a>
             <div id="affichage">
             </div>
             
